[package]
name = "rael"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0",features = ["event-stream","bracketed-paste"] }
futures = "0.3.31"
futures-timer = "3.0.3"
lazy_static = "1.5.0"
rand = "0.9.2"
rayon = "1.11.0"
rust-embed = "8.11.0"
tokio = { version = "1.49.0", features = ["full"] }

[build-dependencies]
image = "0.25.9"

